#6674 fix header text and menu overlaping

--- a/js/notebook/src/tableDisplay/css/datatables.scss
+++ b/js/notebook/src/tableDisplay/css/datatables.scss
@@ -131,7 +131,7 @@ $fix-col-separator-width: 3px;
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAWCAYAAADjGu3TAAAAJUlEQVQoFWOcOXPmfwYsgAmLGFiIHhK47MYtzjjqD/TAoWJEAQCA7QiAdBnZNQAAAABJRU5ErkJggg==');
   background-size: 3px;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 5px center;
   height: 20px;
   padding: 0 10px;
 }
